# semantic_navigation

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.conda  README.md  compose.yaml  init_script.sh  process.sh  ros.txt  skeleton-mapping  steps.txt  todo.txt
conceptfusion-compact/: environment.yaml  environment.yml  latest_pcd_save  setup.py
conceptfusion-compact/cf_compact/: dataset.py  semantic_map.py
conceptfusion-compact/cf_compact/classes/: scannet200_classes_colors.json
conceptfusion-compact/cf_compact/configs/: mapping.yaml  omniverse.yaml  paths.yaml
conceptfusion-compact/cf_compact/datautils/: dataset_base.py  geometry.py  rgbd_images.py
conceptfusion-compact/cf_compact/utils/: general_utils.py  logging_metrics.py  mapping.py  model_utils.py  optional_rerun_wrapper.py  slam_utils.py  vis.py
conceptfusion-compact/visualizer/: vis_cf.py  vis_graph.py
docker/: Dockerfile  Dockerfile.conda  compose.sh  init_script.sh  install_segformer.sh  isaac_env.yaml  update_submodules.sh
docker/docker_pc/: Dockerfile_macOS  compose.sh
docker/docker_pc/conda_environments/: cf_compact.yaml  cf_tools.yaml  local_planner.yaml
isaac_scenes/: hospital_lights.usd  in_office.usd  inofficenew.usd  inofficenewclipped.usd  office_lights.usd  office_lights_blinds.usd  office_lights_blinds_ros.usd
mapping-tools/: clean_omni_data.py  cut_bbx.py  cut_pcd.py  generate_commands.py  merge_objects.py
mapping-tools/clustering/: cluster_objects.py  environment.yaml  graph.ipynb  poses_pcd.py
mapping-tools/clustering/assets/: context_hospital.txt  context_skypark.txt  describe_image_prompt.txt  global_context.txt  label_cluster_prompt.txt  output_example.txt
mapping-tools/clustering/experiments/: test_cluster.py
mapping-tools/clustering/utils/: io.py  llm_queries.py
mapping-tools/format_converters/: colmap2nerfstudio.py  cvsl2omni.py  omni2colmap.py  pcd2las.py  ply2pcd.py  replace.txt
mapping-tools/live_slam_ros/: ros_dataset.py  ros_runner.py
mapping-tools/mesh/: pcd2mesh.py
mapping-tools/nerfstudio/: Dockerfile  build_splat.sh  environment.yaml  process_csnl.sh  setup_nerfstudio.sh
mapping-tools/nerfstudio/scripts/: build_splat_docker.sh  colmap2nerfstudio.py  colmap_utils.py  handle_colmap.sh  handle_omni.sh  omni2colmap.py
mission_ros_ws/: launch_mission.py  snippets.txt
mission_ros_ws/launch/: launch_human_mission.py  launch_node.py  launch_object_mission.py  launch_recording.py
mission_ros_ws/src/cf_tools/: package.xml  setup.py
mission_ros_ws/src/cf_tools/cf_tools/: cf_clip.py  cf_llm.py  concept_fusion.py  utils.py
mission_ros_ws/src/cf_tools/resource/prompts/: cf_planner_prompt_cluster.txt  concept_graphs_planner_no_caption.txt
mission_ros_ws/src/data_saver/: setup.cfg
mission_ros_ws/src/data_saver/data_saver/: data_saver_node.py
mission_ros_ws/src/env_manager/: environment.yaml
mission_ros_ws/src/env_manager/env_manager/: env_manager.py  hworldmodel  mokk_slam.py
mission_ros_ws/src/global_planner/: CMakeLists.txt
mission_ros_ws/src/global_planner/src/: global_planner.cpp  skeleton_exploration.cpp  skeleton_mapped.cpp  skeleton_precomputed.cpp
mission_ros_ws/src/local_planner/: package.xml
mission_ros_ws/src/local_planner/local_planner/: local_planner.py  utils.py  wrapper.py
mission_ros_ws/src/mission_planner/: package.xml  setup.py
mission_ros_ws/src/mission_planner/launch/: human_mission.py
mission_ros_ws/src/mission_planner/mission_planner/: __init__.py  exploration_mission_node.py  human_mission.py  human_mission_node.py  object_mission.py  object_mission_node.py
mission_ros_ws/src/mission_planner/mission_planner/missions/: __init__.py  exploration_mission.py  object_mission.py  waypoint_mission.py  waypoint_mission_cleaner.py
mission_ros_ws/src/mission_planner/resource/: mission_data.json
mission_ros_ws/src/mission_planner_interfaces/: CMakeLists.txt  package.xml
mission_ros_ws/src/visualnav-transformer-ros2/conda_envs/: train_environment.yaml
rayrater/: example.ipynb  features.py  raybox.py  rayrater.py  rayrater_classes.py  utils.py
ros_ws/cf_tools/: setup.cfg  setup.py
ros_ws/cf_tools/cf_tools/: mapobjectlist.py
ros_ws/data_saver/: README.md  package.xml  setup.py
ros_ws/data_saver/data_saver/: data_saver_node.py
ros_ws/env_manager/: setup.cfg  setup.py
ros_ws/env_manager/env_manager/: utils.py  wrapper.py
ros_ws/global_planner/: CMakeLists.txt  environment.yaml  package.xml
ros_ws/global_planner/src/: global_planner.cpp
ros_ws/local_planner/: setup.py
ros_ws/local_planner/local_planner/: local_planner.py
ros_ws/mission_planner/: setup.cfg
ros_ws/mission_planner/mission_planner/missions/: waypoint_mission.py
ros_ws/mission_planner_interfaces/action/: MoveTo.action
ros_ws/src/cf_tools/cf_tools/: concept_fusion.py  utils.py
ros_ws/src/env_manager/: environment.yaml  package.xml
ros_ws/src/env_manager/env_manager/: env_manager.py
ros_ws/src/local_planner/: setup.cfg
ros_ws/src/mission_planner/: environment.yaml  package.xml
ros_ws/src/mission_planner/mission_planner/: mission_planner.py
ros_ws/src/mission_planner_interfaces/: README.md
ros_ws/src/mission_planner_interfaces/msg/: MoveTo.msg
(+1 files in other folders)
